[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = "0.5.3"
http-body-util = "0.1.3"
hyper = {version = "1.7.0", features = ["full"]}
hyper-util = {version ="0.1.17", features = ["full"]}
jsonwebtoken = "9.3.1"
log = "0.4.28"
pretty_env_logger = "0.5.0"
rand = "0.9.2"
rusqlite = "0.37.0"
serde = {version = "1.0.226", features = ["std", "derive"]}
serde_json = "1.0.145"
tokio = {version = "1.47.1", features = ["full"]}
